# logo-diagram-generator

./: .gitignore  Dockerfile  LICENSE  README.md  config.yml  config.yml.example  download_logos.py  generate_diagram.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
examples/: full.example.yml  interactive.example.yml  minimal.example.yml
logo_diagram_generator/: cli.py  download_logos.py  generate_diagram.py  utils.py
